[package]
name = "job_hunter_spain"
version = "0.4.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thirtyfour = "0.31"
askama = "0.12"
askama_axum = "0.4"
rand = "0.8"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] } # Importante: features serde
nom = "7.1"
url = "2.5"
